--- a/src/main/resources/templates/donation/donation-inquiry.html
+++ b/src/main/resources/templates/donation/donation-inquiry.html
@@ -235,6 +235,10 @@
                                     <div class="right-title-wrap end">
                                         <div class="right-title-container">
                                             <div class="report-container">
+                                                <div>
+                                                    <button type="button">수정</button>
+                                                    <button type="button">삭제</button>
+                                                </div>
                                                 <span
                                                     class="for-report"
                                                     id="report-btn"
