--- a/src/main/resources/templates/donation/donation-inquiry.html
+++ b/src/main/resources/templates/donation/donation-inquiry.html
@@ -235,10 +235,6 @@
                                     <div class="right-title-wrap end">
                                         <div class="right-title-container">
                                             <div class="report-container">
-                                                <div class="report-wrap">
-                                                    <button type="button" class="admin-btn" style="display: none">수정</button>
-                                                    <button type="button" class="admin-btn" style="display: none">삭제</button>
-                                                </div>
                                                 <span
                                                     class="for-report"
                                                     id="report-btn"
@@ -340,15 +336,15 @@
                                                 >
                                             </div>
 
-                                            <div class="donation-btn-container">
-                                                <a class="donation-btn-style2 go-update"
+                                            <div class="donation-btn-container report-wrap">
+                                                <a class="donation-btn-style2 go-update admin-btn"
                                                     ><span
                                                         class="visual-correction"
                                                         >수정하기</span
                                                     ></a
                                                 >
                                                 <div class="space"></div>
-                                                <a class="donation-btn-style2 go-delete"
+                                                <a class="donation-btn-style2 go-delete admin-btn"
                                                     ><span
                                                         class="visual-correction"
                                                         >삭제하기</span
