--- a/src/main/resources/static/css/admin_new.css
+++ b/src/main/resources/static/css/admin_new.css
@@ -345,3 +345,41 @@ a {
     line-height: 1.5;
 }
 
+.donation-btn-container {
+    position: relative;
+    display: flex;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: -0.25px;
+}
+
+.donation-btn-style2 {
+    margin-top: 10px;
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+    border: 0px;
+    text-align: center;
+    box-sizing: border-box;
+    color: rgb(38, 86, 246);
+    border: 1px solid rgb(38, 86, 246);
+    padding: 11px 20px;
+    font-size: 15px;
+    line-height: 23px;
+    letter-spacing: -0.5px;
+    font-weight: 700;
+    width: 100%;
+}
+
+.donation-btn-style2:hover {
+    background-color: rgb(244, 245, 248);
+}
+
+.space {
+    width: 40px;
+}
+
