--- a/src/main/resources/static/css/admin_new.css
+++ b/src/main/resources/static/css/admin_new.css
@@ -383,3 +383,75 @@ a {
     width: 40px;
 }
 
+.form footer input[type="submit"] {
+    min-width: auto;
+    width: 120px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    letter-spacing: -0.5px;
+    padding: 0;
+    background-color: rgba(31, 77, 234, 1);
+    border: 0;
+    color: #FFFFFF;
+    -webkit-appearance: button;
+    cursor: pointer;
+}
+
+.form footer input[type="submit"]:hover {
+    background-color: #0e2d95;
+}
+
+.list-top {
+    width: 920px;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    background-color: rgb(245, 248, 255);
+    color: rgb(64, 74, 92);
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.5px;
+    font-weight: 500;
+    padding: 12px 24px;
+    border-bottom: 1px solid rgb(233, 235, 237);
+}
+
+.notification.noit-admin {
+    height: 44px;
+}
+
+.notification {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    height: 72px;
+    border-bottom: 1px solid rgb(233, 235, 237);
+    padding: 12px 0 12px 24px;
+}
+
+.category-notification-num {
+    width: 120px;
+    padding-left: 24px;
+}
+
+.category-notification-title {
+    padding-left: 70px;
+    text-align: center;
+    width: 389px;
+}
+
+.notification-num {
+    font-size: 15px;
+    line-height: 23px;
+    letter-spacing: -0.5px;
+    font-weight: 500;
+    color: rgb(111, 119, 133);
+    width: 166px;
+    padding-left: 4px;
+}
+
