--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -350,20 +350,21 @@
                             <div class="notification-list notification-table">
                                 <div class="ServiceHeader_container">
                                     <h2 class="ServiceHeader_title">공지사항 목록</h2>
-                                    <div class="action-buttons">
-
-                                        <button id="notification-write-button">작성하기</button>
-                                        <button
-                                                id="deleteSelectedBtn"
-                                                class="deleteSelectedBtn notice-delete"
-                                        >
-                                            게시글 삭제
-                                        </button>
-                                        <input
-                                                type="text"
-                                                class="Filter_searchInput notice-page-search"
-                                                placeholder="검색어 입력"
-                                        />
+                                    <div class="action-buttons-wrap">
+                                        <button id="notification-write-button" class="deleteSelectedBtn notice-delete">작성하기</button>
+                                        <div class="action-buttons">
+                                            <button
+                                                    id="deleteSelectedBtn"
+                                                    class="deleteSelectedBtn notice-delete"
+                                            >
+                                                게시글 삭제
+                                            </button>
+                                            <input
+                                                    type="text"
+                                                    class="Filter_searchInput notice-page-search"
+                                                    placeholder="검색어 입력"
+                                            />
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="list-top">
