--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -354,13 +354,13 @@
                                         <button id="notification-write-button">작성하기</button>
                                         <button
                                                 id="deleteSelectedBtn"
-                                                class="deleteSelectedBtn report-delete"
+                                                class="deleteSelectedBtn notice-delete"
                                         >
                                             게시글 삭제
                                         </button>
                                         <input
                                                 type="text"
-                                                class="Filter_searchInput report-page-search"
+                                                class="Filter_searchInput notice-page-search"
                                                 placeholder="검색어 입력"
                                         />
                                     </div>
@@ -655,13 +655,13 @@
                                         <div class="action-buttons">
                                             <input
                                                 type="text"
-                                                class="Filter_searchInput"
+                                                class="Filter_searchInput inquiry-page-search"
                                                 placeholder="검색어 입력"
                                                 name="keyword"
                                             />
                                             <button
                                                     id="deleteSelectedBtn"
-                                                    class="deleteSelectedBtn report-delete"
+                                                    class="deleteSelectedBtn inquirty-delete"
                                             >
                                                 게시글 삭제
                                             </button>
@@ -669,59 +669,59 @@
                                     </div>
                                     <!--문의 내역 테이블 -->
                                     <div class="inquiryTable_container">
-                                        <div
-                                                class="inquiryTable_row inquiryTable_header"
-                                        >
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell selectAllCell"
-                                            >
-                                                <input
-                                                        type="checkbox"
-                                                        id="selectAllInquiries"
-                                                />
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                문의 분류
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                작성일
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                문의 제목
-                                            </div>
+<!--                                        <div-->
+<!--                                                class="inquiryTable_row inquiryTable_header"-->
+<!--                                        >-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell selectAllCell"-->
+<!--                                            >-->
+<!--                                                <input-->
+<!--                                                        type="checkbox"-->
+<!--                                                        id="selectAllInquiries"-->
+<!--                                                />-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                문의 분류-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                작성일-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                문의 제목-->
+<!--                                            </div>-->
 
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                문의 내용
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                작성자
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                이메일
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                상태
-                                            </div>
-                                            <div
-                                                    class="inquiryTable_cell inquiry-headerCell"
-                                            >
-                                                Action
-                                            </div>
-                                        </div>
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                문의 내용-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                작성자-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                이메일-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                상태-->
+<!--                                            </div>-->
+<!--                                            <div-->
+<!--                                                    class="inquiryTable_cell inquiry-headerCell"-->
+<!--                                            >-->
+<!--                                                Action-->
+<!--                                            </div>-->
+<!--                                        </div>-->
 
                                         <!-- Example row (Initial data) -->
                                         <div class="inquiryTable_row data_row">
