--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -644,18 +644,18 @@
                                             <span class="sort-filter-option inquiry-list"
                                                 >봉사단체 가입 문의</span
                                             >
-                                        </div>ㅅ 
+                                        </div>
                                         <!-- Action Buttons -->
                                         <div class="action-buttons">
                                             <input
                                                 type="text"
-                                                class="Filter_searchInput"
+                                                class="Filter_searchInput inquiry-page-search"
                                                 placeholder="검색어 입력"
                                                 name="keyword"
                                             />
                                             <button
                                                     id="deleteSelectedBtn"
-                                                    class="deleteSelectedBtn report-delete"
+                                                    class="deleteSelectedBtn inquiry-delete"
                                             >
                                                 게시글 삭제
                                             </button>
