admin style updated

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -415,7 +415,7 @@
                         <section class="admin-page" data-value="공지사항 작성">
                             <div style="max-width: 1080px; margin: 24px 16px 0;">
                                 <h1>공지사항 작성</h1>
-                                <div class="notification-write-form">
+                                <div class="form notification-write-form">
                                     <form
                                             class="request-form"
                                             data-form
@@ -618,7 +618,7 @@
                         <section class="admin-page" data-value="공지사항 수정">
                         <div style="max-width: 1080px; margin: 24px 16px 0;">
                             <h1>공지사항 수정</h1>
-                            <div class="notification-update-form">
+                            <div class="form notification-update-form">
                                 <form
                                         class="request-form"
                                         data-form
