admin pagination updated

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -697,7 +697,7 @@
                                         <div class="action-buttons">
                                             <input
                                                 type="text"
-                                                class="Filter_searchInput"
+                                                class="Filter_searchInput inquiry-page-search"
                                                 placeholder="검색어 입력"
                                                 name="keyword"
                                             />
@@ -2497,9 +2497,9 @@
 
     <script src="/js/adminPage/admin_page/admin.js"></script>
     <!-- 회원 목록 -->
-    <script src="/js/adminPage/admin_user/admin_user.js"></script>
-    <script src="/js/adminPage/admin_page/admin.js"></script>
-    <script src="/js/adminPage/admin_user/modal_user.js"></script>
+<!--    <script src="/js/adminPage/admin_user/admin_user.js"></script>-->
+<!--    <script src="/js/adminPage/admin_page/admin.js"></script>-->
+<!--    <script src="/js/adminPage/admin_user/modal_user.js"></script>-->
     <!-- 공지사항 목록 -->
     <!--     <script src="/static/js/admin.js"> -->
     <!-- 공지사항 조회 -->
