--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1180,7 +1180,7 @@
                                                 />
                                                 <button
                                                     id="deleteSelectedBtn"
-                                                    class="deleteSelectedBtn"
+                                                    class="deleteSelectedBtn post-page-btn"
                                                 >
                                                     게시글 삭제
                                                 </button>
@@ -2491,9 +2491,10 @@
     </body>
 
     <!-- 관리자 홈 -->
-    <script src="/js/admin.js"></script>
+
     <script src="/js/admin/admin_service.js"></script>
     <script src="/js/admin/admin_layout.js"></script>
+    <script src="/js/admin.js"></script>
 
     <script src="/js/adminPage/admin_page/admin.js"></script>
     <!-- 회원 목록 -->
