--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -351,7 +351,7 @@
                                 <div class="ServiceHeader_container">
                                     <h2 class="ServiceHeader_title">공지사항 목록</h2>
                                     <div class="action-buttons-wrap">
-                                        <button id="notification-write-button" class="deleteSelectedBtn notice-delete">작성하기</button>
+                                        <button id="notification-write-button" class="deleteSelectedBtn">작성하기</button>
                                         <div class="action-buttons">
                                             <button
                                                     id="deleteSelectedBtn"
@@ -368,7 +368,7 @@
                                     </div>
                                 </div>
                                 <div class="list-top">
-                                    <input type="checkbox">
+                                    <input type="checkbox" id="selectAllNotices" >
                                     <div class="category-notification-num">번호</div>
                                     <div class="category-notification-title noti-title-admin">제목</div>
                                     <div class="category-notification-date notification-table noti-date-admin">작성일</div>
