--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -467,18 +467,6 @@
                                                                             <label id="payment-totalCount" class="ezikFA">0</label>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="tab">
-                                                                        <div class="item-wrap">
-                                                                            <div class="item-name">결제 완료</div>
-                                                                            <label id="payment-completedCount" class="ezikFA">0</label>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="tab">
-                                                                        <div class="item-wrap">
-                                                                            <div class="item-name">결제 취소</div>
-                                                                            <label id="payment-cancelCount" class="ezikFA">0</label>
-                                                                        </div>
-                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -1123,18 +1111,6 @@
                                                                             <label id="inquiry-totalCount" class="ezikFA">0</label>
                                                                         </div>
                                                                     </div>
-                                                                    <div class="tab">
-                                                                        <div class="item-wrap">
-                                                                            <div class="item-name">완료</div>
-                                                                            <label id="inquiry-completedCount" class="ezikFA">0</label>
-                                                                        </div>
-                                                                    </div>
-                                                                    <div class="tab">
-                                                                        <div class="item-wrap">
-                                                                            <div class="item-name">대기 중</div>
-                                                                            <label id="inquiry-standbyCount" class="ezikFA">0</label>
-                                                                        </div>
-                                                                    </div>
 
                                                                 </div>
                                                             </div>
@@ -1260,7 +1236,8 @@
                                                             </div>
                                                         </div>
                                                         <div class="content-inner">
-                                                            <div class="postscript-list" style="display: block;"></div>
+                                                            <div class="postscript-list" style="display: block;">
+                                                            </div>
                                                             <div class="empty-component">
                                                                 <div class="kjzWjC empty" style="display: none;">
                                                                     <div class="empty-image">
