--- a/src/main/resources/templates/help/help-write.html
+++ b/src/main/resources/templates/help/help-write.html
@@ -61,6 +61,7 @@
                             accept-charset="UTF-8"
                             method="post"
                             enctype="multipart/form-data"
+                            name="help-write-form"
                         >
                             <div class="form-field" style="position: relative">
                                 <label for="request-type-select">
