--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -1599,4 +1599,5 @@
     <script src="/js/mypage/mypage.js"></script>
     <script src="/js/mypage/mypage-event.js"></script>
     <script src="/js/payment/payment.js"></script>
+    <script src="/js/main/login-header.js"></script>
 </html>
