--- a/src/main/resources/static/css/login/signup.css
+++ b/src/main/resources/static/css/login/signup.css
@@ -87,7 +87,7 @@ header {
     unicode-bidi: isolate;
 }
 .header .logo.loud {
-    background: url(https://accounts-front.stunning.kr/assets/img/common/ico-loud-basic.png) 50% 0 no-repeat;
+    background: url(/images/onjung-logo.png) 50% 0 no-repeat;
     background-size: contain;
 }
 .header .logo, .header .logo.loud {
