--- a/src/main/resources/templates/main/basic-header.html
+++ b/src/main/resources/templates/main/basic-header.html
@@ -11,7 +11,7 @@
                                             alt="main-log"
                                             class="sc-iijcti hkaqym main-logo"
                                             id="imge-logo-missbarrytremblay"
-                                            src="https://cdn-dantats.stunning.kr/static/common/logo/bi-loud.png.small?q=80&f=webp&t=crop&s=328x80"
+                                            src="/images/onjung-logo.png"
                                         />
                                     </a>
                                 </div>
