--- a/src/main/resources/static/css/login/password_reset.css
+++ b/src/main/resources/static/css/login/password_reset.css
@@ -159,7 +159,7 @@ header {
 }
 .header .logo {
     display: inline-block;
-    background: url(https://accounts-front.stunning.kr/assets/img/common/ico-stunning-basic.png) 50% 0 no-repeat;
+    background: url(/images/onjung-logo.png) 50% 0 no-repeat;
     background-size: contain;
     width: 220px;
     height: 32px;
