--- a/src/main/resources/templates/help/help-header.html
+++ b/src/main/resources/templates/help/help-header.html
@@ -11,16 +11,16 @@
             <div class="header-container">
                 <div class="header">
                     <div class="help-logo">
-                        <a href="https://www.loud.kr/" target="_blank">
+                        <a href="/main/main" target="_blank">
                             <img
-                                src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
+                                src="/images/onjung-logo.png"
                                 alt="온정 고객센터 페이지"
                             />
                         </a>
                         <span>
                             <a
                                 title="고객센터 홈"
-                                href="https://help.loud.kr/hc/ko"
+                                href="/help/help"
                                 >고객센터</a
                             >
                         </span>
