--- a/src/main/resources/templates/main/basic-header.html
+++ b/src/main/resources/templates/main/basic-header.html
@@ -177,7 +177,7 @@
                                     </div>
                                     <a
                                         class="sc-ccsojp jbsnef btn-request btn-request-case-2"
-                                        href=""
+                                        href="/member/login"
                                     >
                                         <span class="visual-correction"
                                             >충전하기
