--- a/src/main/resources/templates/help/help.html
+++ b/src/main/resources/templates/help/help.html
@@ -16,9 +16,9 @@
             <div class="header-container">
                 <div class="header">
                     <div class="help-logo">
-                        <a href="/help/help" target="_blank">
+                        <a href="/main/main">
                             <img
-                                    src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
+                                    src="/images/onjung-logo.png"
                                     alt="온정 고객센터 페이지"
                             />
                         </a>
