--- a/src/main/resources/templates/donation/donation-inquiry.html
+++ b/src/main/resources/templates/donation/donation-inquiry.html
@@ -9,8 +9,8 @@
             href="/css/donation/donation-inquiry.css"
         />
         <link
-            rel="icon"
-            href="https://cdn-dantats.stunning.kr/static/feature/loudFavicon/loud-favicon-32-new.png"
+                rel="icon"
+                href="/images/favicon.png"
         />
         <link rel="stylesheet" href="/css/main/basic-header.css" />
     </head>
