--- a/src/main/resources/templates/donation/donation-list.html
+++ b/src/main/resources/templates/donation/donation-list.html
@@ -8,6 +8,10 @@
             rel="stylesheet"
             href="/css/donation/donation-list.css"
         />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
     </head>
     <body>
         <div class="main-container content">
