--- a/src/main/resources/templates/help/help.html
+++ b/src/main/resources/templates/help/help.html
@@ -5,9 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/css/help/help.css" />
         <link
-            rel="icon"
-            type="image/x-icon"
-            href="https://help.loud.kr/hc/theming_assets/01HZKZ8AQBQ1J8FF87ZDE3CGX0"
+                rel="icon"
+                href="/images/favicon.png"
         />
         <title>온정 고객센터</title>
     </head>
