--- a/src/main/resources/templates/introduction/introduction.html
+++ b/src/main/resources/templates/introduction/introduction.html
@@ -7,6 +7,10 @@
             rel="stylesheet"
             href="/css/introduction/introduction.css"
         />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
         <title>사업소개</title>
     </head>
     <body>
