--- a/src/main/resources/templates/member/email.html
+++ b/src/main/resources/templates/member/email.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>이메일로 가입하기</title>
         <link rel="stylesheet" href="/css/login/email.css" />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
     </head>
     <body>
         <div class="root">
