--- a/src/main/resources/templates/review/review-list.html
+++ b/src/main/resources/templates/review/review-list.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/review/review.css" />
         <link
             rel="icon"
-            href="https://cdn-dantats.stunning.kr/static/feature/loudFavicon/loud-favicon-32-new.png"
+            href="/images/favicon.png"
         />
     </head>
     <body>
