--- a/src/main/resources/templates/review/review-update.html
+++ b/src/main/resources/templates/review/review-update.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>이용 후기 수정</title>
     <link rel="stylesheet" href="/css/review/review-update.css" />
-    <link rel="icon" href="https://cdn-dantats.stunning.kr/static/feature/loudFavicon/loud-favicon-32-new.png" />
-</head>
+    <link
+            rel="icon"
+            href="/images/favicon.png"
+    /></head>
 <body>
 <div class="content-wrapper">
     <div class="content-container contents">
