--- a/src/main/resources/templates/help/help-notification-list.html
+++ b/src/main/resources/templates/help/help-notification-list.html
@@ -7,6 +7,10 @@
             rel="stylesheet"
             href="/css/help/help-notification-list.css"
         />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
         <title>공지사항 목록</title>
     </head>
     <body>
