--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -5,10 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>메인</title>
         <link rel="stylesheet" href="/css/main/main.css" />
-        <link rel="stylesheet" href="/css/main/basic-header.css" />
         <link rel="stylesheet" href="/css/main/rank-for-main.css" />
+        <link rel="stylesheet" href="/css/main/basic-header.css" />
         <link rel="stylesheet" href="/css/main/footer.css"/>
         <link rel="stylesheet" href="/css/main/login-header-no-noti.css">
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
 
     </head>
     <body>
