--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>로그인</title>
         <link rel="stylesheet" href="/css/login/login.css" />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
     </head>
     <body>
         <div id="root">
