--- a/src/main/resources/templates/member/password-send-mail.html
+++ b/src/main/resources/templates/member/password-send-mail.html
@@ -8,6 +8,10 @@
             rel="stylesheet"
             href="/static/css/login/password_send_mail.css"
         />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
     </head>
     <body>
         <div id="root">
