--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
     <link rel="stylesheet" href="/css/login/signup.css" />
+    <link
+            rel="icon"
+            href="/images/favicon.png"
+    />
 </head>
 <body>
 <div id="root">
