--- a/src/main/resources/templates/mypage/mypage-profile-edit.html
+++ b/src/main/resources/templates/mypage/mypage-profile-edit.html
@@ -8,6 +8,10 @@
             rel="stylesheet"
             href="/css/mypage/mypage-profile-edit.css"
         />
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
 
         <style>
             @import url(https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap);
