--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="/css/mypage/mypage.css" />
         <link rel="stylesheet" href="/css/main/footer.css"/>
         <link rel="stylesheet" href="/css/main/login-header-no-noti.css">
+        <link
+                rel="icon"
+                href="/images/favicon.png"
+        />
         <style>
             @import url(https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap);
         </style>
