--- a/src/main/resources/templates/review/review-write.html
+++ b/src/main/resources/templates/review/review-write.html
@@ -9,8 +9,8 @@
             href="/css/review/review-write.css"
         />
         <link
-            rel="icon"
-            href="https://cdn-dantats.stunning.kr/static/feature/loudFavicon/loud-favicon-32-new.png"
+                rel="icon"
+                href="/images/favicon.png"
         />
     </head>
     <body>
